feat: Task model; authentication middleware
