# app-backend/app/Http/Requests/AuthenticateUserRequest.php
@@ -1,0 +1,59 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class AuthenticateUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function attributes(): array
+    {
+        return [
+            'email' => 'Email',
+            'password' => 'Password'
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'required' => 'The :attribute field is required.',
+            'email' => 'The :attribute must be a valid email address.',
+            'exists' => 'The :attribute does not exist.',
+            'password' => 'The :attribute must be at least 6 characters.'
+        ];
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|string|email|max:255|exists:users,email',
+            'password' => 'required|string|min:6',
+        ];
+    }
+
+    protected function withValidator(Validator $validator)
+    {
+        if ($validator->fails()) {
+            throw new HttpResponseException(response()->json([
+                'success' => false,
+                'errors' => $validator->errors(),
+            ], 422));
+        }
+    }
+}
